[build-system]
requires = ["maturin>=1.8.0"]
build-backend = "maturin"

[project]
name = "ton_address_converter"
version = "0.1.0"  # Added version field
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Cryptocurrency :: TON"
]
dependencies = [
    "typing_extensions>=4.0.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
